--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"server": "nodemon server.js",
 		"lint:fix": "prettier --write '**/*.js'",
 		"test": "jest --config ./jest.config.json",
-		"testing": "jest --watchAll --config ./jest.config.json"
+		"prepare": "husky install"
 	},
 	"author": "cl4pper@gmail.com",
 	"license": "ISC",
@@ -25,6 +25,7 @@
 	},
 	"devDependencies": {
 		"babel-plugin-module-resolver": "^5.0.0",
+		"husky": "^8.0.3",
 		"jest": "^29.7.0",
 		"prettier": "^3.1.1",
 		"supertest": "^6.3.3"
