--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"server:up": "docker-compose up -d",
 		"server:down": "docker-compose down",
 		"server": "nodemon server.js",
-		"lint:fix": "prettier --write '**/*.js'",
+		"lint": "prettier --write '**/*.js'",
 		"test": "jest --config ./jest.config.json",
+		"watch": "jest --watchAll --config ./jest.config.json",
 		"prepare": "husky install"
 	},
 	"author": "cl4pper@gmail.com",
