--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"server:down": "docker-compose down",
 		"server": "nodemon server.js",
 		"lint": "prettier --write '**/*.js'",
-		"test": "jest --config ./jest.config.json",
-		"watch": "jest --watchAll --config ./jest.config.json",
+		"test": "jest --passWithNoTests --config ./jest.config.json",
+		"watch": "jest --passWithNoTests --watchAll --config ./jest.config.json",
 		"prepare": "husky install"
 	},
 	"author": "cl4pper@gmail.com",
